:iphone: Implemented frontend view for report search

--- a/WebApplicationFrontend/src/app/search/prescription-simple-search/prescription-simple-search.component.html
+++ b/WebApplicationFrontend/src/app/search/prescription-simple-search/prescription-simple-search.component.html
@@ -3,7 +3,7 @@
 </div>
 <form class="container" [formGroup]="prescriptionForm"> 
 <div>
-    <a mat-raised-button routerLink="/reportSearch" target="_blank">Search reports</a>
+    <a mat-raised-button routerLink="/reportSimpleSearch" target="_blank">Search reports</a>
 </div>
 
 <div style="text-align: justify;margin-top: 15px;">
