--- a/WebApplicationFrontend/src/app/survey/do-survey/survey/survey/survey.component.html
+++ b/WebApplicationFrontend/src/app/survey/do-survey/survey/survey/survey.component.html
@@ -3,45 +3,34 @@
         <label id="Doctor"><b>Doctor</b></label>       
     </div>
     <mat-divider></mat-divider>
-    <label id = "questions">How would you rate your doctor?</label>
-    <div>
-        <mat-radio-group        
-        class="example-radio-group"
-        [(ngModel)]="question">
-            <label id = "grade">excellent</label>
-            <mat-radio-button class="example-radio-button"></mat-radio-button>
-            <label id = "grade">very good</label>
-            <mat-radio-button class="example-radio-button"></mat-radio-button>
-            <label id = "grade">good</label>
-            <mat-radio-button class="example-radio-button"></mat-radio-button>
-            <label id = "grade">poor</label>
-            <mat-radio-button class="example-radio-button"></mat-radio-button>
-            <label id = "grade">very poor</label>
-            <mat-radio-button class="example-radio-button"></mat-radio-button>
-        </mat-radio-group>
-    </div>  
+    <div class="Doctor1" *ngFor = "let questionSurvey of allQuestions">
+        <div *ngIf="questionSurvey.QuestionType == 0">
+            <label id = "questions">{{questionSurvey.Question}}</label>
+            <div>
+                <mat-radio-group        
+                class="example-radio-group"
+                [(ngModel)]="questionList[questionSurvey.Id]">
+                    <mat-radio-button class="example-radio-button" [value]=1></mat-radio-button>
+                    <label id = "grade">excellent</label>
+                    <mat-radio-button class="example-radio-button" [value]=2></mat-radio-button>
+                    <label id = "grade">very good</label>
+                    <mat-radio-button class="example-radio-button" [value]=3></mat-radio-button>
+                    <label id = "grade">good</label>
+                    <mat-radio-button class="example-radio-button" [value]=4></mat-radio-button>
+                    <label id = "grade">poor</label>
+                    <mat-radio-button class="example-radio-button" [value]=5></mat-radio-button>
+                    <label id = "grade"> very poor</label>
+                    
+                </mat-radio-group>
+            </div> 
+        </div>
+    </div> 
     <mat-divider></mat-divider>
-    <label id = "questions">How would you rate your doctors expertise?</label>
-    <div>
-        <mat-radio-group        
-        class="example-radio-group1"
-        [(ngModel)]="question1">
-            <label id = "grade">excellent</label>
-            <mat-radio-button class="example-radio-button1"></mat-radio-button>
-            <label id = "grade">very good</label>
-            <mat-radio-button class="example-radio-button1"></mat-radio-button>
-            <label id = "grade">good</label>
-            <mat-radio-button class="example-radio-button1"></mat-radio-button>
-            <label id = "grade">poor</label>
-            <mat-radio-button class="example-radio-button1"></mat-radio-button>
-            <label id = "grade">very poor</label>
-            <mat-radio-button class="example-radio-button1"></mat-radio-button>
-        </mat-radio-group>
-    </div>  
-    <mat-divider></mat-divider>
+
     <div class = "medical_stuff">
         <label id="Doctor"><b>Medical staff</b></label>       
     </div>
+    <!--
     <mat-divider></mat-divider>
     <label id = "questions">How would you rate our medical staff?</label>
     <div>
@@ -60,28 +49,13 @@
             <mat-radio-button class="example-radio-button2"></mat-radio-button>
         </mat-radio-group>
     </div>  
+    -->
     <mat-divider></mat-divider>
-    <label id = "questions">How would you rate our medical staff politeness?</label>
-    <div>
-        <mat-radio-group        
-        class="example-radio-group1"
-        [(ngModel)]="question3">
-            <label id = "grade">excellent</label>
-            <mat-radio-button class="example-radio-button3"></mat-radio-button>
-            <label id = "grade">very good</label>
-            <mat-radio-button class="example-radio-button3"></mat-radio-button>
-            <label id = "grade">good</label>
-            <mat-radio-button class="example-radio-button3"></mat-radio-button>
-            <label id = "grade">poor</label>
-            <mat-radio-button class="example-radio-button3"></mat-radio-button>
-            <label id = "grade">very poor</label>
-            <mat-radio-button class="example-radio-button3"></mat-radio-button>
-        </mat-radio-group>
-    </div>
-    <mat-divider></mat-divider>
+
     <div class = "hospital">
         <label id="Doctor"><b>Hospital</b></label>       
     </div>
+    <!--
     <mat-divider></mat-divider>
     <label id = "questions">How would you rate our hospital?</label>
     <div>
@@ -100,70 +74,9 @@
             <mat-radio-button class="example-radio-button4"></mat-radio-button>
         </mat-radio-group>
     </div>  
+    -->
     <mat-divider></mat-divider>
-    <button mat-raised-button id="button" color="accent" >Post</button>
-     
+    <button mat-raised-button id="button" color="accent" (click)="onSubmit()">Post</button>
+
 </div>
 
-<!--
-<table mat-table class="mat-elevation-z8">
-
-    <ng-container matColumnDef="question">
-      <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let element"> 
-        <mat-radio-group [(ngModel)]="question">
-            <mat-radio-button ></mat-radio-button>
-        </mat-radio-group> 
-      </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="excellent">
-      <th mat-header-cell *matHeaderCellDef>excellent</th>
-      <td mat-cell *matCellDef="let element"> 
-        <mat-radio-group [(ngModel)]="question">
-            <mat-radio-button ></mat-radio-button>
-        </mat-radio-group> 
-      </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="very good">
-      <th mat-header-cell *matHeaderCellDef>very good</th>
-      <td mat-cell *matCellDef="let element"> 
-        <mat-radio-group [(ngModel)]="question">
-            <mat-radio-button ></mat-radio-button>
-        </mat-radio-group> 
-      </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="good">
-      <th mat-header-cell *matHeaderCellDef>good</th>
-      <td mat-cell *matCellDef="let element"> 
-        <mat-radio-group [(ngModel)]="question">
-            <mat-radio-button ></mat-radio-button>
-        </mat-radio-group> 
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="poor">
-        <th mat-header-cell *matHeaderCellDef>poor</th>
-        <td mat-cell *matCellDef="let element"> 
-            <mat-radio-group [(ngModel)]="question">
-                <mat-radio-button ></mat-radio-button>
-            </mat-radio-group> 
-          </td>
-      </ng-container>
-
-      <ng-container matColumnDef="very poor">
-        <th mat-header-cell *matHeaderCellDef>very poor</th>
-        <td mat-cell *matCellDef="let element"> 
-            <mat-radio-group [(ngModel)]="question">
-                <mat-radio-button ></mat-radio-button>
-            </mat-radio-group> 
-          </td>
-      </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>-->
-  
-  
