--- a/WebApplicationFrontend/src/app/survey/do-survey/survey/survey/survey.component.html
+++ b/WebApplicationFrontend/src/app/survey/do-survey/survey/survey/survey.component.html
@@ -1,82 +1,95 @@
 <div class = "survey">
-    <div class = "doctor">
-        <label id="Doctor"><b>Doctor</b></label>       
-    </div>
-    <mat-divider></mat-divider>
-    <div class="Doctor1" *ngFor = "let questionSurvey of allQuestions">
-        <div *ngIf="questionSurvey.QuestionType == 0">
-            <label id = "questions">{{questionSurvey.Question}}</label>
-            <div>
-                <mat-radio-group        
-                class="example-radio-group"
-                [(ngModel)]="questionList[questionSurvey.Id]">
-                    <mat-radio-button class="example-radio-button" [value]=1></mat-radio-button>
-                    <label id = "grade">excellent</label>
-                    <mat-radio-button class="example-radio-button" [value]=2></mat-radio-button>
-                    <label id = "grade">very good</label>
-                    <mat-radio-button class="example-radio-button" [value]=3></mat-radio-button>
-                    <label id = "grade">good</label>
-                    <mat-radio-button class="example-radio-button" [value]=4></mat-radio-button>
-                    <label id = "grade">poor</label>
-                    <mat-radio-button class="example-radio-button" [value]=5></mat-radio-button>
-                    <label id = "grade"> very poor</label>
-                    
-                </mat-radio-group>
-            </div> 
+ <!--<form id="post-form" [formGroup]="postForm" (ngSubmit)="onSubmit()">-->
+        <div class = "doctor">
+            <label id="Doctor"><b>Doctor</b></label>       
         </div>
-    </div> 
-    <mat-divider></mat-divider>
+        <mat-divider></mat-divider>
+        <div class="Doctor1" *ngFor = "let questionSurvey of allQuestions">
+            <div *ngIf="questionSurvey.QuestionType == 0">
+                <label id = "questions">{{questionSurvey.Question}}</label>
+                <div>
+                    <mat-radio-group        
+                    class="example-radio-group"
+                    [(ngModel)]="questionList[questionSurvey.Id]">
+                        <mat-radio-button class="example-radio-button" [value]=1 ></mat-radio-button>
+                        <label id = "grade">excellent</label>
+                        <mat-radio-button class="example-radio-button" [value]=2 ></mat-radio-button>
+                        <label id = "grade">very good</label>
+                        <mat-radio-button class="example-radio-button" [value]=3 ></mat-radio-button>
+                        <label id = "grade">good</label>
+                        <mat-radio-button class="example-radio-button" [value]=4 ></mat-radio-button>
+                        <label id = "grade">poor</label>
+                        <mat-radio-button class="example-radio-button" [value]=5 ></mat-radio-button>
+                        <label id = "grade"> very poor</label>
+                        
+                    </mat-radio-group>
+                </div> 
+            </div>
+            <mat-divider></mat-divider>
+        </div> 
+        <mat-divider></mat-divider>
 
-    <div class = "medical_stuff">
-        <label id="Doctor"><b>Medical staff</b></label>       
-    </div>
-    <!--
-    <mat-divider></mat-divider>
-    <label id = "questions">How would you rate our medical staff?</label>
-    <div>
-        <mat-radio-group        
-        class="example-radio-group2"
-        [(ngModel)]="question2">
-            <label id = "grade">excellent</label>
-            <mat-radio-button class="example-radio-button2"></mat-radio-button>
-            <label id = "grade">very good</label>
-            <mat-radio-button class="example-radio-button2"></mat-radio-button>
-            <label id = "grade">good</label>
-            <mat-radio-button class="example-radio-button2"></mat-radio-button>
-            <label id = "grade">poor</label>
-            <mat-radio-button class="example-radio-button2"></mat-radio-button>
-            <label id = "grade">very poor</label>
-            <mat-radio-button class="example-radio-button2"></mat-radio-button>
-        </mat-radio-group>
-    </div>  
-    -->
-    <mat-divider></mat-divider>
+        <div class = "medical_stuff">
+            <label id="Doctor"><b>Medical staff</b></label>       
+        </div>
+        
+        <mat-divider></mat-divider>
+        <div class="Doctor1" *ngFor = "let questionSurvey of allQuestions">
+            <div *ngIf="questionSurvey.QuestionType == 1">
+                <label id = "questions">{{questionSurvey.Question}}</label>
+                        <div>
+                            <mat-radio-group        
+                            class="example-radio-group"
+                            [(ngModel)]="questionList[questionSurvey.Id]">
+                                <mat-radio-button class="example-radio-button" [value]=1 ></mat-radio-button>
+                                <label id = "grade">excellent</label>
+                                <mat-radio-button class="example-radio-button" [value]=2 ></mat-radio-button>
+                                <label id = "grade">very good</label>
+                                <mat-radio-button class="example-radio-button" [value]=3 ></mat-radio-button>
+                                <label id = "grade">good</label>
+                                <mat-radio-button class="example-radio-button" [value]=4 ></mat-radio-button>
+                                <label id = "grade">poor</label>
+                                <mat-radio-button class="example-radio-button" [value]=5 ></mat-radio-button>
+                                <label id = "grade"> very poor</label>
+                                
+                            </mat-radio-group>
+                        </div> 
+            </div>
+            <mat-divider></mat-divider>
+        </div>
+        
+        <mat-divider></mat-divider>
 
-    <div class = "hospital">
-        <label id="Doctor"><b>Hospital</b></label>       
-    </div>
-    <!--
-    <mat-divider></mat-divider>
-    <label id = "questions">How would you rate our hospital?</label>
-    <div>
-        <mat-radio-group        
-        class="example-radio-group4"
-        [(ngModel)]="question4">
-            <label id = "grade">excellent</label>
-            <mat-radio-button class="example-radio-button4"></mat-radio-button>
-            <label id = "grade">very good</label>
-            <mat-radio-button class="example-radio-button4"></mat-radio-button>
-            <label id = "grade">good</label>
-            <mat-radio-button class="example-radio-button4"></mat-radio-button>
-            <label id = "grade">poor</label>
-            <mat-radio-button class="example-radio-button4"></mat-radio-button>
-            <label id = "grade">very poor</label>
-            <mat-radio-button class="example-radio-button4"></mat-radio-button>
-        </mat-radio-group>
-    </div>  
-    -->
-    <mat-divider></mat-divider>
-    <button mat-raised-button id="button" color="accent" (click)="onSubmit()">Post</button>
-
+        <div class = "hospital">
+            <label id="Doctor"><b>Hospital</b></label>       
+        </div>
+        
+        <mat-divider></mat-divider>
+        <div class="Doctor1" *ngFor = "let questionSurvey of allQuestions">
+            <div *ngIf="questionSurvey.QuestionType == 2">
+                <label id = "questions">{{questionSurvey.Question}}</label>
+                        <div>
+                            <mat-radio-group        
+                            class="example-radio-group"
+                            [(ngModel)]="questionList[questionSurvey.Id]">
+                                <mat-radio-button class="example-radio-button" [value]=1 ></mat-radio-button>
+                                <label id = "grade">excellent</label>
+                                <mat-radio-button class="example-radio-button" [value]=2 ></mat-radio-button>
+                                <label id = "grade">very good</label>
+                                <mat-radio-button class="example-radio-button" [value]=3 ></mat-radio-button>
+                                <label id = "grade">good</label>
+                                <mat-radio-button class="example-radio-button" [value]=4 ></mat-radio-button>
+                                <label id = "grade">poor</label>
+                                <mat-radio-button class="example-radio-button" [value]=5 ></mat-radio-button>
+                                <label id = "grade"> very poor</label>
+                                
+                            </mat-radio-group>
+                        </div> 
+            </div>
+            <mat-divider></mat-divider>
+        </div>  
+        <mat-divider></mat-divider>
+        <button mat-raised-button id="button" color="accent" (click)="onSubmit()" >Post</button>
+    <!--</form>-->
 </div>
 
