--- a/WebApplicationFrontend/src/app/search/prescription-simple-search/prescription-simple-search.component.css
+++ b/WebApplicationFrontend/src/app/search/prescription-simple-search/prescription-simple-search.component.css
@@ -1,7 +1,15 @@
-.mat-radio-button ~ .mat-radio-button {
-    margin-left: 16px;
+.fix-margins{
+    margin-left: 10px;
 }
 
-.fix-margins{
-    margin-left: 16px;
+table {
+    margin-left: 15%;
+    margin-top: 15px;
+    width: 60%;
+    text-align: center;
+    border-bottom: 1px solid black;
+}
+
+th {
+    background-color: lightpink;
 }
