:iphone: Implemented frontend services

--- a/WebApplicationFrontend/src/app/search/report-simple-search/report-simple-search.component.html
+++ b/WebApplicationFrontend/src/app/search/report-simple-search/report-simple-search.component.html
@@ -63,8 +63,6 @@
 
 <table>
     <th>Doctor</th>
-    <th>Diagnosis</th>
-    <th>Start date</th>
-    <th>End date</th>
+    <th>Date</th>
     <th>Treatment</th>
 </table>
