--- a/WebApplicationFrontend/src/app/search/prescription-simple-search/prescription-simple-search.component.html
+++ b/WebApplicationFrontend/src/app/search/prescription-simple-search/prescription-simple-search.component.html
@@ -58,6 +58,5 @@
 <table>
     <th>Medicine</th>
     <th>Hourly Intake</th>
-    <th>Start date</th>
-    <th>End date</th>
+    <th>Date</th>
 </table>
