--- a/WebApplicationFrontend/src/app/medical-record/medical-record.component.html
+++ b/WebApplicationFrontend/src/app/medical-record/medical-record.component.html
@@ -4,23 +4,23 @@
             <mat-card-title>Patient Information</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-            <p class="content-paragraph">Full Name : <strong>{{ medicalRecord.Name }} {{ medicalRecord.Surname }}</strong></p>
-            <p class="content-paragraph">ID Number: <strong>{{ medicalRecord.PatientId }}</strong></p>
-            <p class="content-paragraph">Gender : <strong>{{ medicalRecord.Gender }}</strong></p>
-            <p class="content-paragraph">Date of birth: <strong>{{ medicalRecord.DateOfBirth | date : 'dd/MM/yyyy'}}</strong></p>
-            <p class="content-paragraph">Blood type: <strong>{{ medicalRecord.BloodType }}</strong></p>
-            <p class="content-paragraph">Address : <strong>{{ medicalRecord.Street }} {{ medicalRecord.Number }} , {{ medicalRecord.City }} , {{ medicalRecord.State }}</strong></p>
-            <p class="content-paragraph">Phone number : <strong>{{ medicalRecord.Phone }}</strong></p>
-            <p class="content-paragraph">E-mail : <strong>{{ medicalRecord.Email }}</strong></p>
-            <p class="content-paragraph">Insurance policy provider : <strong>{{ medicalRecord.InsurancePolicyCompany }}</strong></p>
-            <p class="content-paragraph">Patient condition : <strong>{{medicalRecord.PatientCondition }}</strong></p>
+            <p class="content-paragraph">Full Name : <strong>{{ medicalRecord.name }} {{ medicalRecord.surname }}</strong></p>
+            <p class="content-paragraph">ID Number: <strong>{{ medicalRecord.patientId }}</strong></p>
+            <p class="content-paragraph">Gender : <strong>{{ medicalRecord.gender }}</strong></p>
+            <p class="content-paragraph">Date of birth: <strong>{{ medicalRecord.dateOfBirth | date : 'dd/MM/yyyy'}}</strong></p>
+            <p class="content-paragraph">Blood type: <strong>{{ medicalRecord.bloodType }}</strong></p>
+            <p class="content-paragraph">Address : <strong>{{ medicalRecord.street }} {{ medicalRecord.number }} , {{ medicalRecord.city }} , {{ medicalRecord.state }}</strong></p>
+            <p class="content-paragraph">Phone number : <strong>{{ medicalRecord.phone }}</strong></p>
+            <p class="content-paragraph">E-mail : <strong>{{ medicalRecord.email }}</strong></p>
+            <p class="content-paragraph">Insurance policy provider : <strong>{{ medicalRecord.insurancePolicyCompany }}</strong></p>
+            <p class="content-paragraph">Patient condition : <strong>{{medicalRecord.patientCondition }}</strong></p>
         </mat-card-content>
         <mat-card-footer>
             <mat-tab-group>
                 <mat-tab label="Allergies">
                     <table class="table"> 
                         <th> Name </th>
-                        <tr *ngFor="let allergen of medicalRecord.Allergies">
+                        <tr *ngFor="let allergen of medicalRecord.allergies">
                             <td>{{ allergen }}</td>
                         </tr>
                     </table>
@@ -28,7 +28,7 @@
                 <mat-tab label="Vaccines">
                     <table class="table">
                         <th> Name </th>
-                        <tr *ngFor="let vaccine of medicalRecord.Vaccines">
+                        <tr *ngFor="let vaccine of medicalRecord.vaccines">
                             <td>{{ vaccine }}</td>
                         </tr>
                     </table>
@@ -39,11 +39,11 @@
                         <th> &nbsp; </th>
                         <th> &nbsp; </th>
                         <th> Symptoms </th>
-                        <tr *ngFor="let name of medicalRecord.IllnessHistoryName">
+                        <tr *ngFor="let name of medicalRecord.illnessHistoryName">
                             <td> {{ name }} </td>
                             <td>&nbsp;</td>
                             <td>&nbsp;</td>
-                            <td> {{ medicalRecord.IllnessHistorySymptoms }} </td>
+                            <td> {{ medicalRecord.illnessHistorySymptoms }} </td>
                         </tr>
                     </table>
                 </mat-tab>
@@ -54,10 +54,10 @@
                         <th> &nbsp; </th>
                         <th> Diagnoses </th>
                         <tr>
-                            <td> {{ medicalRecord.FamilyIllnessHistoryRelatives }} </td>
+                            <td> {{ medicalRecord.familyIllnessHistoryRelatives }} </td>
                             <td>&nbsp;</td>
                             <td>&nbsp;</td>
-                            <td> {{ medicalRecord.FamilyIllnessHistoryDiagnosis }} </td>
+                            <td> {{ medicalRecord.familyIllnessHistoryDiagnosis }} </td>
                         </tr>
                     </table>
                 </mat-tab>
@@ -67,11 +67,11 @@
                         <th> &nbsp; </th>
                         <th> &nbsp; </th>
                         <th> Medication </th>
-                        <tr *ngFor="let hourConsumption of medicalRecord.TherapiesHourConsumption">
+                        <tr *ngFor="let hourConsumption of medicalRecord.therapiesHourConsumption">
                             <td> {{ hourConsumption }} </td>
                             <td> &nbsp; </td>
                             <td> &nbsp; </td>
-                            <td> {{ medicalRecord.TherapiesMedication[0] }} </td>
+                            <td> {{ medicalRecord.therapiesMedication[0] }} </td>
                         </tr>
                     </table>
                 </mat-tab>
