--- a/GraphicEditor/View/SearchResaultsForEquipment.xaml
+++ b/GraphicEditor/View/SearchResaultsForEquipment.xaml
@@ -8,15 +8,16 @@
       d:DesignHeight="652" d:DesignWidth="766"
       Title="SearchResaultsForEquipment">
 
-    <Grid>
-        <DataGrid AutoGenerateColumns="False" HorizontalAlignment="Center" VerticalAlignment="Center" Width="622" Height="456" RenderTransformOrigin="1.059,-0.838">
+    <DockPanel>
+        <Button DockPanel.Dock="Bottom" Name="btnShowOnMap" Width="300" Margin="0,5,0,5" Content="Shown on map" FontWeight="Bold" FontSize="18" Click="buttonShownOnMap"/>
+        <DataGrid Name="dataGridEquipment" DockPanel.Dock="Top" AutoGenerateColumns="False" IsReadOnly="True">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Name" Width="125"/>
-                <DataGridTextColumn Header="Quantity" Width="125"/>
-                <DataGridTextColumn Header="Room" Width="125"/>
-                <DataGridTextColumn Header="Floor" Width="125"/>
-                <DataGridTextColumn Header="Building" Width="125"/>
+                <DataGridTextColumn Header="Name" Width="149" Binding="{Binding EquipmentType.Name}"/>
+                <DataGridTextColumn Header="Quantity" Width="149" Binding="{Binding QuantityInRoom}"/>
+                <DataGridTextColumn Header="Room" Width="149" Binding="{Binding Room.RoomLabel}"/>
+                <DataGridTextColumn Header="Floor" Width="149" Binding="{Binding Room.Department.Floor}" />
+                <DataGridTextColumn Header="Building" Width="149" Binding="{Binding Room.Department.Hospital.Name}"/>
             </DataGrid.Columns>
         </DataGrid>
-    </Grid>
+    </DockPanel>
 </Page>
