--- a/GraphicEditor/View/SearchResultsForMedicines.xaml
+++ b/GraphicEditor/View/SearchResultsForMedicines.xaml
@@ -12,11 +12,11 @@
         <Button DockPanel.Dock="Bottom" Name="btnShowOnMap" Width="300" Margin="0,5,0,5" Content="Shown on map" FontWeight="Bold" FontSize="18" Click="buttonShowOnMap"/>
         <DataGrid DockPanel.Dock="Top" Name="dataGridMedicate" AutoGenerateColumns="False">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Id" Width="149"/>
-                <DataGridTextColumn Header="Name" Width="149"/>
-                <DataGridTextColumn Header="Dosage" Width="149"/>
-                <DataGridTextColumn Header="Quantity" Width="149"/>
-                <DataGridTextColumn Header="Storige room" Width="149"/>
+                <DataGridTextColumn Header="Id" Width="149"  Binding="{Binding Medication.Id}"/>
+                <DataGridTextColumn Header="Name" Width="149"  Binding="{Binding Medication.Med}"/>
+                <DataGridTextColumn Header="Dosage" Width="149"  Binding="{Binding Medication.Dosage}" />
+                 <DataGridTextColumn Header="Quantity" Width="149" Binding="{Binding Medication.Quantity}"/>
+                <DataGridTextColumn Header="Storige room" Width="149"  Binding="{Binding Medication.RoomId}"/>
             </DataGrid.Columns>
         </DataGrid>
     </DockPanel>
