--- a/GraphicEditor/View/SearchResultsForMedicines.xaml
+++ b/GraphicEditor/View/SearchResultsForMedicines.xaml
@@ -10,13 +10,13 @@
 
     <DockPanel>
         <Button DockPanel.Dock="Bottom" Name="btnShowOnMap" Width="300" Margin="0,5,0,5" Content="Shown on map" FontWeight="Bold" FontSize="18" Click="buttonShowOnMap"/>
-        <DataGrid DockPanel.Dock="Top" Name="dataGridMedicate" AutoGenerateColumns="False">
+        <DataGrid DockPanel.Dock="Top" Name="dataGridMedicate" AutoGenerateColumns="False" IsReadOnly="True">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Id" Width="149"  Binding="{Binding Medication.Id}"/>
-                <DataGridTextColumn Header="Name" Width="149"  Binding="{Binding Medication.Med}"/>
-                <DataGridTextColumn Header="Dosage" Width="149"  Binding="{Binding Medication.Dosage}" />
-                 <DataGridTextColumn Header="Quantity" Width="149" Binding="{Binding Medication.Quantity}"/>
-                <DataGridTextColumn Header="Storige room" Width="149"  Binding="{Binding Medication.RoomId}"/>
+                <DataGridTextColumn Header="Id" Width="149"  Binding="{Binding Id}"/>
+                <DataGridTextColumn Header="Name" Width="149"  Binding="{Binding Med}"/>
+                <DataGridTextColumn Header="Dosage" Width="149"  Binding="{Binding Dosage}" />
+                 <DataGridTextColumn Header="Quantity" Width="149" Binding="{Binding Quantity}"/>
+                <DataGridTextColumn Header="Storige room" Width="149"  Binding="{Binding Room.RoomLabel}"/>
             </DataGrid.Columns>
         </DataGrid>
     </DockPanel>
