--- a/WebApplicationFrontend/src/app/search/prescription-search/prescription-search.component.html
+++ b/WebApplicationFrontend/src/app/search/prescription-search/prescription-search.component.html
@@ -43,7 +43,7 @@
                 <mat-label>Hourly intake</mat-label>
                 <input matInput formControlName="hourField">
                 <mat-error *ngIf="prescriptionForm.get('hourField').hasError('pattern') && !prescriptionForm.get('hourField').hasError('required')">
-                    Must be a number 0-9
+                    Must be a number 1-24
                 </mat-error>
                 <mat-error *ngIf="prescriptionForm.get('hourField').hasError('required')">
                     Can not be empty
@@ -93,7 +93,7 @@
             <mat-label>Hourly intake</mat-label>
             <input matInput formControlName="hourField2">
             <mat-error *ngIf="prescriptionForm.get('duplicates.0').get('hourField2').hasError('pattern') && !prescriptionForm.get('duplicates.0').get('hourField2').hasError('required')">
-                Must be a number 0-9
+                Must be a number 1-24
             </mat-error>
             <mat-error *ngIf="prescriptionForm.get('duplicates.0').get('hourField2').hasError('required')">
                 Can not be empty
@@ -118,8 +118,19 @@
 
 </form>
 
-<table>
-    <tr *ngFor="let prescription of allPrescriptions">
-        <td *ngFor="let items of prescription"></td>
-    </tr>
-</table>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+    <ng-container matColumnDef="medicine">
+      <th mat-header-cell *matHeaderCellDef> Medicine </th>
+      <td mat-cell *matCellDef="let element"> {{element.FirstOperand}} </td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="hourly intake">
+      <th mat-header-cell *matHeaderCellDef> Hourly intake </th>
+      <td mat-cell *matCellDef="let element"> {{element.SecondOperand}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
