--- a/WebApplicationFrontend/src/app/search/report-search/report-search.component.html
+++ b/WebApplicationFrontend/src/app/search/report-search/report-search.component.html
@@ -30,11 +30,11 @@
         <span *ngIf="reportForm.get('selectedOption').value === 'Search by doctor'">
             <mat-form-field appearance="fill" class="fix-margins">
                 <mat-label>Doctor</mat-label>
-                <input matInput [formControl]="doc">
-                <mat-error *ngIf="doc.hasError('pattern') && !doc.hasError('required')">
+                <input matInput formControlName="doc">
+                <mat-error *ngIf="reportForm.get('doc').hasError('pattern') && !reportForm.get('doc').hasError('required')">
                     Must contain letters only
                 </mat-error>
-                <mat-error *ngIf="doc.hasError('required')">
+                <mat-error *ngIf="reportForm.get('doc').hasError('required')">
                     Can not be empty
                 </mat-error>
             </mat-form-field>
@@ -43,11 +43,11 @@
         <span *ngIf="reportForm.get('selectedOption').value === 'Search by diagnosis'">
             <mat-form-field appearance="fill" class="fix-margins">
                 <mat-label>Diagnosis</mat-label>
-                <input matInput [formControl]="diag">
-                <mat-error *ngIf="diag.hasError('pattern') && !diag.hasError('required')">
+                <input matInput formControlName="diag">
+                <mat-error *ngIf="reportForm.get('diag').hasError('pattern') && !reportForm.get('diag').hasError('required')">
                     Must contain letters only
                 </mat-error>
-                <mat-error *ngIf="diag.hasError('required')">
+                <mat-error *ngIf="reportForm.get('diag').hasError('required')">
                     Can not be empty
                 </mat-error>
             </mat-form-field>
@@ -71,11 +71,11 @@
         <span *ngIf="reportForm.get('selectedOption').value === 'Search by allergens'">
             <mat-form-field appearance="fill" class="fix-margins">
                 <mat-label>Allergens</mat-label>
-                <input matInput [formControl]="allergens">
-                <mat-error *ngIf="allergens.hasError('pattern') && !allergens.hasError('required')">
+                <input matInput formControlName="allergens">
+                <mat-error *ngIf="reportForm.get('allergens').hasError('pattern') && !reportForm.get('allergens').hasError('required')">
                     Must contain letters only
                 </mat-error>
-                <mat-error *ngIf="allergens.hasError('required')">
+                <mat-error *ngIf="reportForm.get('allergens').hasError('required')">
                     Can not be empty
                 </mat-error>
             </mat-form-field>
@@ -87,7 +87,7 @@
     
     <div formArrayName="duplicates" *ngFor="let creds of reportForm.get('duplicates')['controls']; let i = index;">
     
-    <div formGroupName="{{i}}">
+    <div [formGroupName]="i">
     <mat-radio-group aria-label="Select an option" formControlName="radios2">
     <mat-radio-button value="1">AND</mat-radio-button>
     <mat-radio-button value="2">OR</mat-radio-button>
@@ -110,11 +110,11 @@
     <span *ngIf="reportForm.get('duplicates.0').value.selectedOption2 === 'Search by doctor'">
         <mat-form-field appearance="fill" class="fix-margins">
             <mat-label>Doctor</mat-label>
-            <input matInput [formControl]="doc2">
-            <mat-error *ngIf="doc2.hasError('pattern') && !doc2.hasError('required')">
+            <input matInput formControlName="doc2">
+            <mat-error *ngIf="reportForm.get('duplicates.0').get('doc2').hasError('pattern') && !reportForm.get('duplicates.0').get('doc2').hasError('required')">
                 Must contain letters only
             </mat-error>
-            <mat-error *ngIf="doc2.hasError('required')">
+            <mat-error *ngIf="reportForm.get('duplicates.0').get('doc2').hasError('required')">
                 Can not be empty
             </mat-error>
         </mat-form-field>
@@ -123,11 +123,11 @@
     <span *ngIf="reportForm.get('duplicates.0').value.selectedOption2 === 'Search by diagnosis'">
         <mat-form-field appearance="fill" class="fix-margins">
             <mat-label>Diagnosis</mat-label>
-            <input matInput [formControl]="diag2">
-            <mat-error *ngIf="diag2.hasError('pattern') && !diag2.hasError('required')">
+            <input matInput formControlName="diag2">
+            <mat-error *ngIf="reportForm.get('duplicates.0').get('diag2').hasError('pattern') && !reportForm.get('duplicates.0').get('diag2').hasError('required')">
                 Must contain letters only
             </mat-error>
-            <mat-error *ngIf="diag2.hasError('required')">
+            <mat-error *ngIf="reportForm.get('duplicates.0').get('diag2').hasError('required')">
                 Can not be empty
             </mat-error>
         </mat-form-field>
@@ -151,11 +151,11 @@
     <span *ngIf="reportForm.get('duplicates.0').value.selectedOption2 === 'Search by allergens'">
         <mat-form-field appearance="fill" class="fix-margins">
             <mat-label>Allergens</mat-label>
-            <input matInput [formControl]="allergens2">
-            <mat-error *ngIf="allergens2.hasError('pattern') && !allergens2.hasError('required')">
+            <input matInput formControlName="allergens2">
+            <mat-error *ngIf="reportForm.get('duplicates.0').get('allergens2').hasError('pattern') && !reportForm.get('duplicates.0').get('allergens2').hasError('required')">
                 Must contain letters only
             </mat-error>
-            <mat-error *ngIf="allergens2.hasError('required')">
+            <mat-error *ngIf="reportForm.get('duplicates.0').get('allergens2').hasError('required')">
                 Can not be empty
             </mat-error>
         </mat-form-field>
