--- a/GraphicEditor/View/Building2GroundFloorPlan.xaml
+++ b/GraphicEditor/View/Building2GroundFloorPlan.xaml
@@ -5,6 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:GraphicEditor"
       mc:Ignorable="d" 
+      Loaded="Building2Objects"
       d:DesignHeight="652" d:DesignWidth="766"
       Title="Building2FloorPlan">
 
